--- a/src/global.less
+++ b/src/global.less
@@ -1,42 +1,42 @@
 @font-face {
+  font-weight: 300;
   font-family: "AlibabaSans";
   font-style: normal;
-  font-weight: 300;
-  font-display: swap;
   src: url("//mdn.alipayobjects.com/huamei_iwk9zp/afts/file/A*1GSgSYDD_aIAAAAAQsAAAAgAegCCAQ/AlibabaSans-Light.woff2")
     format("woff2");
+  font-display: swap;
 }
 @font-face {
+  font-weight: 400;
   font-family: "AlibabaSans";
   font-style: normal;
-  font-weight: 400;
-  font-display: swap;
   src: url("//mdn.alipayobjects.com/huamei_iwk9zp/afts/file/A*2zEUQqnPNesAAAAAQtAAAAgAegCCAQ/AlibabaSans-Regular.woff2")
     format("woff2");
+  font-display: swap;
 }
 @font-face {
+  font-weight: 500;
   font-family: "AlibabaSans";
   font-style: normal;
-  font-weight: 500;
-  font-display: swap;
   src: url("//mdn.alipayobjects.com/huamei_iwk9zp/afts/file/A*E_cxRbMlZqUAAAAAQuAAAAgAegCCAQ/AlibabaSans-Medium.woff2")
     format("woff2");
+  font-display: swap;
 }
 @font-face {
+  font-weight: 600;
   font-family: "AlibabaSans";
   font-style: normal;
-  font-weight: 600;
-  font-display: swap;
   src: url("//mdn.alipayobjects.com/huamei_iwk9zp/afts/file/A*E_cxRbMlZqUAAAAAQuAAAAgAegCCAQ/AlibabaSans-Bold.woff2")
     format("woff2");
+  font-display: swap;
 }
 @font-face {
+  font-weight: 700;
   font-family: "AlibabaSans";
   font-style: normal;
-  font-weight: 700;
-  font-display: swap;
   src: url("//mdn.alipayobjects.com/huamei_iwk9zp/afts/file/A*E_cxRbMlZqUAAAAAQuAAAAgAegCCAQ/AlibabaSans-Heavy.woff2")
     format("woff2");
+  font-display: swap;
 }
 
 html,
@@ -45,9 +45,9 @@ body,
   height: 100%;
   margin: 0;
   padding: 0;
-  font-family:
-    AlibabaSans, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans',
-    sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+  font-family: AlibabaSans, -apple-system, BlinkMacSystemFont, "Segoe UI",
+    Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif,
+    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
 .colorWeak {
@@ -74,6 +74,15 @@ body {
 ul,
 ol {
   list-style: none;
+}
+
+.ant-pro-page-container-children-container {
+  padding-inline: 30px;
+  padding-block-end: 30px;
+}
+
+.ant-pro-table .ant-pro-table-search {
+  margin-block-end: 0;
 }
 
 @media (max-width: 768px) {
