--- a/src/global.less
+++ b/src/global.less
@@ -76,9 +76,13 @@ ol {
   list-style: none;
 }
 
+.ant-page-header-no-children {
+  height: 20px;
+}
+
 .ant-pro-page-container-children-container {
-  padding-inline: 30px;
-  padding-block-end: 30px;
+  padding-inline: 20px;
+  padding-block-end: 20px;
 }
 
 .ant-pro-table .ant-pro-table-search {
