--- a/src/global.less
+++ b/src/global.less
@@ -77,16 +77,38 @@ ol {
 }
 
 .ant-page-header-no-children {
-  height: 20px;
+  height: 12px;
 }
 
 .ant-pro-page-container-children-container {
-  padding-inline: 20px;
-  padding-block-end: 20px;
+  padding-inline: 12px;
+  padding-block-end: 12px;
+}
+
+.ant-pro-card .ant-pro-card-header {
+  padding-inline: 16px;
+}
+
+.ant-pro-card .ant-pro-card-body {
+  padding-inline: 16px;
+  padding-block: 12px;
 }
 
 .ant-pro-table .ant-pro-table-search {
   margin-block-end: 0;
+}
+
+.ant-table.ant-table-small .ant-table-row .ant-table-cell {
+  padding-top: 2px !important;
+  padding-bottom: 2px !important;
+}
+
+.ant-pro-query-filter.ant-pro-query-filter {
+  padding: 16px;
+}
+
+.ant-table-wrapper .ant-table-pagination.ant-pagination {
+  margin-top: 12px !important;
 }
 
 @media (max-width: 768px) {
