--- a/src/pages/arbitrageRate/index.less
+++ b/src/pages/arbitrageRate/index.less
@@ -20,45 +20,13 @@
   }
 
   &.long {
-    background-color: #f6ffed;
-    border: 1px solid #52c41a;
-
-    .fieldL,
-    .fieldR {
-      :global(.ant-select-selector) {
-        color: #52c41a !important;
-        border-color: #52c41a !important;
-      }
-
-      :global(.ant-select-selection-item) {
-        color: #52c41a !important;
-      }
-
-      :global(.ant-select-arrow) {
-        color: #52c41a !important;
-      }
-    }
+    background-color: rgba(82, 196, 26, 0.5);
+    border: 1px solid rgba(82, 196, 26, 0.8);
   }
 
   &.short {
-    background-color: #fff2f0;
-    border: 1px solid #ff4d4f;
-
-    .fieldL,
-    .fieldR {
-      :global(.ant-select-selector) {
-        color: #ff4d4f !important;
-        border-color: #ff4d4f !important;
-      }
-
-      :global(.ant-select-selection-item) {
-        color: #ff4d4f !important;
-      }
-
-      :global(.ant-select-arrow) {
-        color: #ff4d4f !important;
-      }
-    }
+    background-color: rgba(255, 77, 79, 0.5);
+    border: 1px solid rgba(255, 77, 79, 0.8);
   }
 }
 
